# Bipan

./: .gitignore  .gitmodules  INNARDS.md  README.md  TODO.md  bipan-rules.pro  build_flashable_module.sh  build_module.sh  clean_build_dir.sh  create_flashable_zip.sh  create_profiling_report.sh  finder.py  hash_table.cpp  patcher.py  queried_props  unwinder.c
BipanTest/: settings.gradle.kts
BipanTest/app/: build.gradle.kts
BipanTest/app/src/main/cpp/: CMakeLists.txt  main.c
Grunfeld/: gradle.properties  settings.gradle.kts
Grunfeld/app/: build.gradle.kts
Grunfeld/app/src/main/: AndroidManifest.xml
Grunfeld/app/src/main/cpp/: CMakeLists.txt  atomic_cat.c  atomic_cat.h  main.c  shared.h  socket_helper.c  socket_helper.h  test_runner.c  test_runner.h
Grunfeld/gradle/: libs.versions.toml
flashable_module/: service.sh
module/: customize.sh  module.prop  service.sh
module/jni/: Android.mk  Application.mk
src/b/: BaseHook.java  J.java
src/b/modules/: AntiAppInspectionHook.java  AntiNetworkDiscoveryHook.java  AntiScreenshotDetectionHook.java  DexLoaderMonitorHook.java  MemoryInfoHook.java  NetworkSpoofingHook.java  SettingsHook.java  SystemPropertiesHook.java  TelephonyManagerHook.java
src/com/omarmesqq/bipan/: BaseHook.java  BipanJava.java  SettingsHook.java
src/com/omarmesqq/bipan/modules/: AntiAppInspectionHook.java  AntiAppSweepingHook.java  AntiDiscoveryHook.java  AntiNetworkDiscoveryHook.java  AntiScreenshotDetectionHook.java  BatteryHook.java  ConnectivityHook.java  DexLoaderMonitorHook.java  DisplayMetricsHook.java  InstallerInfoHook.java  MediaConnectionHook.java  MediaRouterHook.java  MemoryInfoHook.java  MsysProviderHook.java  MsysTrustHook.java  NetworkHook.java  NetworkSecurityHook.java  NetworkSpoofingHook.java  NsdHook.java  NsdManagerHook.java  (+8 more)
src/jni/: Android.mk  Application.mk  as_safe_string.hpp  assembly.hpp  bipan.cpp  bipan_export.map  bipan_filters.cpp  bipan_filters.hpp  bipan_hash_table.cpp  bipan_hash_table.hpp  bipan_shared.hpp  blocker.cpp  blocker.hpp  broker.cpp  broker.hpp  common_utils.hpp  compile_time_flags.hpp  filter.cpp  filter.hpp  hooks.hpp  ipc_communication.hpp  logger.cpp  logger.hpp  root_companion.cpp  shared.hpp  shared_ipc.hpp  sigsys_handler.cpp  sigsys_handler.hpp  spoofer.cpp  spoofer.hpp  synchronization.hpp  unwinder.hpp  utils.hpp
src/jni/broker/: broker.cpp  policies.cpp  policies.hpp  root_companion.cpp  spoofer.cpp  unwinder.cpp  unwinder.hpp
src/jni/in-app/: bipan.cpp  filter.cpp  filter.hpp  globals.hpp  hooks.hpp  ipc_lock.hpp  sigsys_handler.cpp  sigsys_handler.hpp
src/jni/logger/: logger.cpp  logger.hpp
src/jni/memory/: mem_tools.cpp
src/jni/tools/: mem.cpp  mem.hpp
(+45 files in other folders)
